--- a/guardar_pagina_request.ipynb
+++ b/guardar_pagina_request.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "url = \"https://www.eltiempo.com/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url2 = \"https://www.pagina12.com.ar/\""
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "0ce56360f3a0b747f14554c7b7f95155f3cd51b1c09fe356d5e7f29a73f5f877"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
